# CUDA-Image-and-Video

./: CMakeLists.txt  README.md
Examples/: CMakeLists.txt  main.cpp
Lib/: CMakeLists.txt
Lib/Include/: CMakeLists.txt  DataParser.cuh  ImageContainer.cu  ImageContainer.cuh  image.cu  image.h  image_encoder.cu  image_encoder.h  library.cu  testmultiply.cu  testmultiply.cuh
Lib/Include/ImageParsing/: DataParser.cuh  ImageContainer.cu  ImageContainer.cuh  ImageParser.cu  ImageParser.cuh
Lib/Include/Processors/: average.cu  average.h  blur.cu  blur.h  edge.cu  edge.h  sharpen.cu  sharpen.h
